==> Quick-Flash/QUICKSILVER/src/drivers/drv_motor_dshot_dma_f4.c <==
#include <stdbool.h>
#include "control.h"
#include "drv_gpio.h"
#include "drv_motor.h"
#include "drv_spi.h"
#include "drv_time.h"
#include "profile.h"
#include "project.h"
#include "util.h"
#define DSHOT_BIT_TIME ((PWM_CLOCK_FREQ_HZ / 1000 / profile.motor.dshot_time) - 1)
#define DSHOT_T0H_TIME (DSHOT_BIT_TIME * 0.30 + 0.05)
#define DSHOT_T1H_TIME (DSHOT_BIT_TIME * 0.60 + 0.05)
#define DSHOT_PORT_COUNT (DSHOT_GPIO_A + DSHOT_GPIO_B + DSHOT_GPIO_C)
#define FORWARD 0
#define REVERSE 1

void motor_init() {
  LL_GPIO_InitTypeDef gpio_init;
  gpio_init.Mode = LL_GPIO_MODE_OUTPUT;
  gpio_init.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
  gpio_init.Pull = LL_GPIO_PULL_NO;
  gpio_init.Speed = LL_GPIO_SPEED_FREQ_HIGH;

#define MOTOR_PIN(port, pin, pin_af, timer, timer_channel) \
  gpio_init.Pin = LL_GPIO_PIN_##pin;                       \
  LL_GPIO_Init(GPIO##port, &gpio_init);                    \
  if (GPIO##port == GPIOA) {                               \
    DSHOT_GPIO_A = 1;                                      \
    dshot_portA_low |= (LL_GPIO_PIN_##pin);                \
    dshot_portA_high |= (LL_GPIO_PIN_##pin << 16);         \
  } else if (GPIO##port == GPIOB) {                        \
    DSHOT_GPIO_B = 1;                                      \
    dshot_portB_low |= (LL_GPIO_PIN_##pin);                \
    dshot_portB_high |= (LL_GPIO_PIN_##pin << 16);         \
  } else if (GPIO##port == GPIOC) {                        \
    DSHOT_GPIO_C = 1;                                      \
    dshot_portC_low |= (LL_GPIO_PIN_##pin);                \
    dshot_portC_high |= (LL_GPIO_PIN_##pin << 16);         \
  }

  MOTOR_PINS

#undef MOTOR_PIN

  for (int i = 0; i < 48; i = i + 3) {
    portA_buffer[i] = dshot_portA_low;
    portB_buffer[i] = dshot_portB_low;
    portC_buffer[i] = dshot_portC_low;
  }

  for (int i = 2; i < 48; i = i + 3) {
    portA_buffer[i] = dshot_portA_high;
    portB_buffer[i] = dshot_portB_high;
    portC_buffer[i] = dshot_portC_high;
  }

  // DShot timer/DMA2 init
  // TIM1_UP: set all output to HIGH		                at TIM1 update - no dma event
  // TIM1_CH1 DMA2_STREAM_6/CH0: reset output if data=0		at TIM1 update - CompareValue = 0
  // TIM1_CH2 DMA2_STREAM_6/CH0: reset output if data=0		at T0H timing
  // TIM1_CH3 DMA2_STREAM_6/CH0: reset all output			at T1H timing

  LL_TIM_InitTypeDef tim_init;
  LL_TIM_OC_InitTypeDef tim_oc_init;

  LL_TIM_StructInit(&tim_init);
  LL_TIM_OC_StructInit(&tim_oc_init);

  // TIM1 Periph clock enable
  LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM1);

  /* Time base configuration */
  tim_init.Autoreload = DSHOT_BIT_TIME;
  tim_init.Prescaler = 0;
  tim_init.ClockDivision = 0;
  tim_init.CounterMode = LL_TIM_COUNTERMODE_UP;
  LL_TIM_Init(TIM1, &tim_init);
  LL_TIM_DisableARRPreload(TIM1);

  /* Timing Mode configuration: Channel 1 */
  tim_oc_init.OCMode = LL_TIM_OCMODE_FROZEN;
  tim_oc_init.OCState = LL_TIM_OCSTATE_DISABLE;
  tim_oc_init.CompareValue = 0;
  LL_TIM_OC_Init(TIM1, LL_TIM_CHANNEL_CH1, &tim_oc_init);
  LL_TIM_OC_DisablePreload(TIM1, LL_TIM_CHANNEL_CH1);

  /* Timing Mode configuration: Channel 2 */
  tim_oc_init.OCMode = LL_TIM_OCMODE_FROZEN;
  tim_oc_init.OCState = LL_TIM_OCSTATE_DISABLE;
  tim_oc_init.CompareValue = DSHOT_T0H_TIME;
  LL_TIM_OC_Init(TIM1, LL_TIM_CHANNEL_CH2, &tim_oc_init);
  LL_TIM_OC_DisablePreload(TIM1, LL_TIM_CHANNEL_CH2);

  /* Timing Mode configuration: Channel 3 */
  tim_oc_init.OCMode = LL_TIM_OCMODE_FROZEN;
  tim_oc_init.OCState = LL_TIM_OCSTATE_DISABLE;
  tim_oc_init.CompareValue = DSHOT_T1H_TIME;
  LL_TIM_OC_Init(TIM1, LL_TIM_CHANNEL_CH3, &tim_oc_init);
  LL_TIM_OC_DisablePreload(TIM1, LL_TIM_CHANNEL_CH3);

  LL_DMA_InitTypeDef DMA_InitStructure;
  LL_DMA_StructInit(&DMA_InitStructure);

  LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_DMA2);

  /* DMA2 Stream6_Channel0 configuration ----------------------------------------------*/
  LL_DMA_DeInit(DMA2, LL_DMA_STREAM_6);
  DMA_InitStructure.Channel = LL_DMA_CHANNEL_0;
  DMA_InitStructure.PeriphOrM2MSrcAddress = (uint32_t)&gpioA->BSRRL;
  DMA_InitStructure.MemoryOrM2MDstAddress = (uint32_t)portA_buffer;
  DMA_InitStructure.Direction = LL_DMA_DIRECTION_MEMORY_TO_PERIPH;
  DMA_InitStructure.NbData = 48;
  DMA_InitStructure.PeriphOrM2MSrcIncMode = LL_DMA_PERIPH_NOINCREMENT;
  DMA_InitStructure.MemoryOrM2MDstIncMode = LL_DMA_MEMORY_INCREMENT;
  DMA_InitStructure.PeriphOrM2MSrcDataSize = LL_DMA_PDATAALIGN_WORD;
  DMA_InitStructure.MemoryOrM2MDstDataSize = LL_DMA_MDATAALIGN_WORD;
  DMA_InitStructure.Mode = LL_DMA_MODE_NORMAL;
  DMA_InitStructure.Priority = LL_DMA_PRIORITY_HIGH;
  DMA_InitStructure.FIFOMode = LL_DMA_FIFOMODE_DISABLE;
  DMA_InitStructure.MemBurst = LL_DMA_MBURST_SINGLE;
  DMA_InitStructure.PeriphBurst = LL_DMA_PBURST_SINGLE;
  LL_DMA_Init(DMA2, LL_DMA_STREAM_6, &DMA_InitStructure);

  LL_TIM_EnableDMAReq_CC3(TIM1);
  LL_TIM_EnableDMAReq_CC2(TIM1);
  LL_TIM_EnableDMAReq_CC1(TIM1);

  NVIC_EnableIRQ(DMA2_Stream6_IRQn);

  // enable DMA2 Stream6 transfer complete interrupt
  LL_DMA_EnableIT_TC(DMA2, LL_DMA_STREAM_6);

  // set failsafetime so signal is off at start
  pwm_failsafe_time = timer_micros() - 100000;
  pwmdir = FORWARD;
}

void dshot_dma_portA() {
  DMA2_Stream6->PAR = (uint32_t)&gpioA->BSRRL;
  DMA2_Stream6->M0AR = (uint32_t)portA_buffer;
  dshot_dma_stream_enable();
}

void dshot_dma_portB() {
  DMA2_Stream6->PAR = (uint32_t)&gpioB->BSRRL;
  DMA2_Stream6->M0AR = (uint32_t)portB_buffer;
  dshot_dma_stream_enable();
}

void dshot_dma_start() {
  uint32_t time = timer_micros();

  // wait maximum a LOOPTIME for dshot dma to complete
  while ((dshot_dma_phase != 0 || spi_dma_is_ready(SPI_PORT1) == 0) && (timer_micros() - time) < state.looptime * 1e6f)
    ;

  if (dshot_dma_phase != 0 || spi_dma_is_ready(SPI_PORT1) == 0)
    return; // skip this dshot command

  // generate dshot dma packet
  for (uint8_t i = 0; i < 16; i++) {
    motor_data_portA[i] = 0;
    motor_data_portB[i] = 0;
    motor_data_portC[i] = 0;

#define MOTOR_PIN(port, pin, pin_af, timer, timer_channel)    \
  if (!(dshot_packet[MOTOR_PIN_IDENT(port, pin)] & 0x8000)) { \
    if (GPIO##port == GPIOA)                                  \
      motor_data_portA[i] |= (LL_GPIO_PIN_##pin << 16);       \
    else if (GPIO##port == GPIOB)                             \
      motor_data_portB[i] |= (LL_GPIO_PIN_##pin << 16);       \
    else if (GPIO##port == GPIOC)                             \
      motor_data_portC[i] |= (LL_GPIO_PIN_##pin << 16);       \
  }

    MOTOR_PINS

#undef MOTOR_PIN

    dshot_packet[0] <<= 1;
    dshot_packet[1] <<= 1;
    dshot_packet[2] <<= 1;
    dshot_packet[3] <<= 1;
  }

  for (int i = 1, j = 0; i < 48 && j < 16; i += 3, j++) {
    portA_buffer[i] = motor_data_portA[j];
    portB_buffer[i] = motor_data_portB[j];
    portC_buffer[i] = motor_data_portC[j];
  }

  dshot_dma_phase = DSHOT_PORT_COUNT;

  TIM1->ARR = DSHOT_BIT_TIME;
  TIM1->CCR1 = 0;
  TIM1->CCR2 = DSHOT_T0H_TIME;
  TIM1->CCR3 = DSHOT_T1H_TIME;

  if (DSHOT_GPIO_A == 1)
    dshot_dma_portA();
  else if (DSHOT_GPIO_B == 1)
    dshot_dma_portB();
  else if (DSHOT_GPIO_C == 1)
    dshot_dma_portC();
}
