==> BossHobby/QUICKSILVER/src/drivers/drv_motor_dshot_dma_f0.c <==
#include "control.h"
#include "defines.h"
#include "drv_motor.h"
#include "drv_time.h"
#include "profile.h"
#include "project.h"
#include "util.h"
#define DSHOT600
#define DSHOT_BIT_TIME ((SYS_CLOCK_FREQ_HZ / 1000 / 150) - 1)
#define DSHOT_T0H_TIME (DSHOT_BIT_TIME * 0.30 + 0.05)
#define DSHOT_T1H_TIME (DSHOT_BIT_TIME * 0.60 + 0.05)
#define DSHOT_BIT_TIME ((SYS_CLOCK_FREQ_HZ / 1000 / 300) - 1)
#define DSHOT_T0H_TIME (DSHOT_BIT_TIME * 0.30 + 0.05)
#define DSHOT_T1H_TIME (DSHOT_BIT_TIME * 0.60 + 0.05)
#define DSHOT_BIT_TIME ((SYS_CLOCK_FREQ_HZ / 1000 / 600) - 1) // clock cycles per bit for a bit timing period of 1.67us
#define DSHOT_T0H_TIME (DSHOT_BIT_TIME * 0.30 + 0.05)
#define DSHOT_T1H_TIME (DSHOT_BIT_TIME * 0.60 + 0.05)
#define DSHOT_PORT_COUNT (DSHOT_GPIO_A + DSHOT_GPIO_B)
#define FORWARD 0
#define REVERSE 1
#define gpioset(port, pin) port->BSRR = pin
#define gpioreset(port, pin) port->BRR = pin

void motor_init() {
  GPIO_InitTypeDef GPIO_InitStructure;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

#define MOTOR_PIN(port, pin, pin_af, timer, timer_channel) \
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_##pin;            \
  GPIO_Init(GPIO##port, &GPIO_InitStructure);              \
  if (GPIO##port == GPIOA) {                               \
    DSHOT_GPIO_A = 1;                                      \
    *dshot_portA |= GPIO_Pin_##pin;                        \
  } else if (GPIO##port == GPIOB) {                        \
    DSHOT_GPIO_B = 1;                                      \
    *dshot_portB |= GPIO_Pin_##pin;                        \
  }

  MOTOR_PINS

#undef MOTOR_PIN

  //GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;
  //GPIO_Init(GPIOA, &GPIO_InitStructure);

  // DShot timer/DMA init
  // TIM1_UP  DMA_CH5: set all output to HIGH		at TIM1 update
  // TIM1_CH1 DMA_CH2: reset output if data=0		at T0H timing
  // TIM1_CH4 DMA_CH4: reset all output					at T1H timing

  TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
  TIM_OCInitTypeDef TIM_OCInitStructure;

  TIM_TimeBaseStructInit(&TIM_TimeBaseStructure);
  TIM_OCStructInit(&TIM_OCInitStructure);
  // TIM1 Periph clock enable
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM1, ENABLE);

  /* Time base configuration */
  TIM_TimeBaseStructure.TIM_Period = DSHOT_BIT_TIME;
  TIM_TimeBaseStructure.TIM_Prescaler = 0;
  TIM_TimeBaseStructure.TIM_ClockDivision = 0;
  TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
  TIM_TimeBaseInit(TIM1, &TIM_TimeBaseStructure);
  TIM_ARRPreloadConfig(TIM1, DISABLE);

  /* Timing Mode configuration: Channel 1 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Disable;
  TIM_OCInitStructure.TIM_Pulse = DSHOT_T0H_TIME;
  TIM_OC1Init(TIM1, &TIM_OCInitStructure);
  TIM_OC1PreloadConfig(TIM1, TIM_OCPreload_Disable);

  /* Timing Mode configuration: Channel 4 */
  TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_Timing;
  TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Disable;
  TIM_OCInitStructure.TIM_Pulse = DSHOT_T1H_TIME;
  TIM_OC4Init(TIM1, &TIM_OCInitStructure);
  TIM_OC4PreloadConfig(TIM1, TIM_OCPreload_Disable);

  DMA_InitTypeDef DMA_InitStructure;

  DMA_StructInit(&DMA_InitStructure);
  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);

  /* DMA1 Channe5 configuration ----------------------------------------------*/
  DMA_DeInit(DMA1_Channel5);
  DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)&GPIOA->BSRR;
  DMA_InitStructure.DMA_MemoryBaseAddr = (uint32_t)dshot_portA;
  DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;
  DMA_InitStructure.DMA_BufferSize = 16;
  DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
  DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Disable;
  DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_HalfWord;
  DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_HalfWord;
  DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
  DMA_InitStructure.DMA_Priority = DMA_Priority_High;
  DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;
  DMA_Init(DMA1_Channel5, &DMA_InitStructure);

  /* DMA1 Channel2 configuration ----------------------------------------------*/
  DMA_DeInit(DMA1_Channel2);
  DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)&GPIOA->BRR;
  DMA_InitStructure.DMA_MemoryBaseAddr = (uint32_t)motor_data_portA;
  DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;
  DMA_InitStructure.DMA_BufferSize = 16;
  DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
  DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
  DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_HalfWord;
  DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_HalfWord;
  DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
  DMA_InitStructure.DMA_Priority = DMA_Priority_High;
  DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;
  DMA_Init(DMA1_Channel2, &DMA_InitStructure);

  /* DMA1 Channel4 configuration ----------------------------------------------*/
  DMA_DeInit(DMA1_Channel4);
  DMA_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)&GPIOA->BRR;
  DMA_InitStructure.DMA_MemoryBaseAddr = (uint32_t)dshot_portA;
  DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;
  DMA_InitStructure.DMA_BufferSize = 16;
  DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
  DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Disable;
  DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_HalfWord;
  DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_HalfWord;
  DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;
  DMA_InitStructure.DMA_Priority = DMA_Priority_High;
  DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;
  DMA_Init(DMA1_Channel4, &DMA_InitStructure);

  TIM_DMACmd(TIM1, TIM_DMA_Update | TIM_DMA_CC4 | TIM_DMA_CC1, ENABLE);

  NVIC_InitTypeDef NVIC_InitStructure;
  /* configure DMA1 Channel4 interrupt */
  NVIC_InitStructure.NVIC_IRQChannel = DMA1_Channel4_5_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPriority = (uint8_t)DMA_Priority_High;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);
  /* enable DMA1 Channel4 transfer complete interrupt */
  DMA_ITConfig(DMA1_Channel4, DMA_IT_TC, ENABLE);

  // set failsafetime so signal is off at start
  pwm_failsafe_time = gettime() - 100000;
  pwmdir = FORWARD;
}

void dshot_dma_portA() {
  DMA1_Channel5->CPAR = (uint32_t)&GPIOA->BSRR;
  DMA1_Channel5->CMAR = (uint32_t)dshot_portA;
  DMA1_Channel2->CPAR = (uint32_t)&GPIOA->BRR;
  DMA1_Channel2->CMAR = (uint32_t)motor_data_portA;
  DMA1_Channel4->CPAR = (uint32_t)&GPIOA->BRR;
  DMA1_Channel4->CMAR = (uint32_t)dshot_portA;

  DMA_ClearFlag(DMA1_FLAG_GL2 | DMA1_FLAG_GL4 | DMA1_FLAG_GL5);

  DMA1_Channel5->CNDTR = 16;
  DMA1_Channel2->CNDTR = 16;
  DMA1_Channel4->CNDTR = 16;

  TIM1->SR = 0;

  DMA_Cmd(DMA1_Channel2, ENABLE);
  DMA_Cmd(DMA1_Channel4, ENABLE);
  DMA_Cmd(DMA1_Channel5, ENABLE);

  TIM_DMACmd(TIM1, TIM_DMA_Update | TIM_DMA_CC4 | TIM_DMA_CC1, ENABLE);

  TIM_SetCounter(TIM1, DSHOT_BIT_TIME);
  TIM_Cmd(TIM1, ENABLE);
}

void dshot_dma_portB() {
  DMA1_Channel5->CPAR = (uint32_t)&GPIOB->BSRR;
  DMA1_Channel5->CMAR = (uint32_t)dshot_portB;
  DMA1_Channel2->CPAR = (uint32_t)&GPIOB->BRR;
  DMA1_Channel2->CMAR = (uint32_t)motor_data_portB;
  DMA1_Channel4->CPAR = (uint32_t)&GPIOB->BRR;
  DMA1_Channel4->CMAR = (uint32_t)dshot_portB;

  DMA_ClearFlag(DMA1_FLAG_GL2 | DMA1_FLAG_GL4 | DMA1_FLAG_GL5);

  DMA1_Channel5->CNDTR = 16;
  DMA1_Channel2->CNDTR = 16;
  DMA1_Channel4->CNDTR = 16;

  TIM1->SR = 0;

  DMA_Cmd(DMA1_Channel2, ENABLE);
  DMA_Cmd(DMA1_Channel4, ENABLE);
  DMA_Cmd(DMA1_Channel5, ENABLE);

  TIM_DMACmd(TIM1, TIM_DMA_Update | TIM_DMA_CC4 | TIM_DMA_CC1, ENABLE);

  TIM_SetCounter(TIM1, DSHOT_BIT_TIME);
  TIM_Cmd(TIM1, ENABLE);
}

void dshot_dma_start() {
  uint32_t time = gettime();

  // wait maximum a LOOPTIME for dshot dma to complete
  while (dshot_dma_phase != 0 && (gettime() - time) < LOOPTIME)
    ;

  if (dshot_dma_phase != 0)
    return; // skip this dshot command

#if defined(RGB_LED_DMA) && (RGB_LED_NUMBER > 0) //TODO - port to F4 when RGB gets done
  /// terminate current RGB transfer
  extern int rgb_dma_phase;

  time = gettime();
  while (rgb_dma_phase == 1 && (gettime() - time) < LOOPTIME) {
  } // wait maximum a LOOPTIME for RGB dma to complete

  if (rgb_dma_phase == 1) { // terminate current RGB dma transfer, proceed dshot
    rgb_dma_phase = 0;
    DMA_Cmd(DMA1_Channel5, DISABLE);
    DMA_Cmd(DMA1_Channel2, DISABLE);
    DMA_Cmd(DMA1_Channel4, DISABLE);

    TIM_DMACmd(TIM1, TIM_DMA_Update | TIM_DMA_CC4 | TIM_DMA_CC1, DISABLE);
    TIM_Cmd(TIM1, DISABLE);
    extern void failloop();
    failloop(9);
  }
#endif

  // generate dshot dma packet
  for (uint8_t i = 0; i < 16; i++) {
    motor_data_portA[i] = 0;
    motor_data_portB[i] = 0;

#define MOTOR_PIN(port, pin, pin_af, timer, timer_channel)    \
  if (!(dshot_packet[MOTOR_PIN_IDENT(port, pin)] & 0x8000)) { \
    if (GPIO##port == GPIOA)                                  \
      motor_data_portA[i] |= pin;                             \
    else if (GPIO##port == GPIOB)                             \
      motor_data_portB[i] |= pin;                             \
  }

    MOTOR_PINS

#undef MOTOR_PIN

    dshot_packet[0] <<= 1;
    dshot_packet[1] <<= 1;
    dshot_packet[2] <<= 1;
    dshot_packet[3] <<= 1;
  }

  dshot_dma_phase = DSHOT_PORT_COUNT;

  TIM1->ARR = DSHOT_BIT_TIME;
  TIM1->CCR1 = DSHOT_T0H_TIME;
  TIM1->CCR4 = DSHOT_T1H_TIME;

  DMA1_Channel2->CCR |= DMA_MemoryDataSize_HalfWord | DMA_PeripheralDataSize_HalfWord; // switch from byte to halfword

  dshot_dma_portA();
}
